<resources>
    <string name="app_name">Examen moviles</string>
    <string name="txtView_book_tittle_label">Titulo:</string>
    <string name="txtView_book_pages_label">Paginas:</string>
    <string name="txtView_book_editorial_label">Editorial:</string>
    <string name="txtView_book_author_label">Autor:</string>
    <string name="txtView_book_description_label">Descripcion:</string>
    <string name="txtView_book_photo_url_label">Imagen:</string>
    <string name="txtView_add_photoUrl_label">Imagen URL:</string>
    <string name="btn_add_book_label">Añadir:</string>
</resources>