<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="50dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtView_book_title_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/txtView_book_tittle_label"
                android:textAlignment="viewStart"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtView_book_pages_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/txtView_book_pages_label"
                android:textAlignment="viewStart"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtView_book_title_label" />

            <TextView
                android:id="@+id/txtView_book_editorial_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/txtView_book_editorial_label"
                android:textAlignment="textStart"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtView_book_pages_label" />

            <TextView
                android:id="@+id/txtView_book_author_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/txtView_book_author_label"
                android:textAlignment="viewStart"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtView_book_editorial_label" />

            <TextView
                android:id="@+id/txtView_book_description_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/txtView_book_description_label"
                android:textAlignment="viewStart"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtView_book_author_label" />

            <TextView
                android:id="@+id/txtView_book_photo_url_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/txtView_book_photo_url_label"
                android:textAlignment="viewStart"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtView_book_description_label" />

            <TextView
                android:id="@+id/txtView_book_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                app:layout_constraintBaseline_toBaselineOf="@+id/txtView_book_title_label"
                app:layout_constraintStart_toEndOf="@+id/txtView_book_title_label" />

            <TextView
                android:id="@+id/txtView_book_pages"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                app:layout_constraintBaseline_toBaselineOf="@+id/txtView_book_pages_label"
                app:layout_constraintStart_toEndOf="@+id/txtView_book_pages_label" />

            <TextView
                android:id="@+id/txtView_book_editorial"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                app:layout_constraintBaseline_toBaselineOf="@+id/txtView_book_editorial_label"
                app:layout_constraintStart_toEndOf="@+id/txtView_book_editorial_label" />

            <TextView
                android:id="@+id/txtView_book_author"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                app:layout_constraintBaseline_toBaselineOf="@+id/txtView_book_author_label"
                app:layout_constraintStart_toEndOf="@+id/txtView_book_author_label" />

            <TextView
                android:id="@+id/txtView_book_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                app:layout_constraintBaseline_toBaselineOf="@+id/txtView_book_description_label"
                app:layout_constraintStart_toEndOf="@+id/txtView_book_description_label" />

            <TextView
                android:id="@+id/txtView_book_photo_url"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:textAlignment="viewStart"
                app:layout_constraintBaseline_toBaselineOf="@+id/txtView_book_photo_url_label"
                app:layout_constraintStart_toEndOf="@+id/txtView_book_photo_url_label" />

            <ImageView
                android:id="@+id/ImageView_book_photoUrl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline4"
                tools:srcCompat="@tools:sample/avatars" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="149dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>